# vb2026-utility-tools

./: .gitignore  CMakeLists.txt  readme.md  vb2026-utility-tools.cpp  vb2026-utility-tools.h  vcpkg-configuration.json
UI/: main.qml
